# sample-fastapi-graphql-starter-project

./: .gitignore  Dockerfile.web  LICENSE  README.MD  docker-compose.yaml  main.py  pyproject.toml
app/config/: __init__.py
app/graphql/: __init__.py
app/models/hello/: hello_response_models.py
app/resolvers/hello/: resolve_hello.py
tests/: test_main.py
